Tweak header padding, button color, and footer info

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     Image by <a href="https://www.pexels.com/@tirachard-kumtanom-112571">Tirachard
     Kumtanom</a> from <a href="https://www.pexels.com">www.pexels.com</a>
     <br>
-    Copyright &copy; The Odin Project 2021
+    Copyright &copy; <a href="https://github.com/S8VEN">S8VEN</a> - The Odin Project 2021
   </div>
 </body>
 
