Tweak most of the image and text

--- a/index.html
+++ b/index.html
@@ -9,58 +9,55 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,400&display=swap"
     rel="stylesheet">
-  <title>Landing Page</title>
+  <title>Iron Fist Boxing GYM</title>
 </head>
 
 <body>
   <div class="header">
-    <div class="logo">Header Logo</div>
+    <div class="logo">IRON FIST BOXING GYM</div>
+    <div class="logo"><img src="img/logo.png" width="120px" alt="logo"><br></div>
     <ul class="links">
-      <li><a href="#">header link one</a></li>
-      <li><a href="#">header link two</a></li>
-      <li><a href="#">header link three</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Services</a></li>
     </ul>
   </div>
   <div class="body">
     <div class="hero">
       <div class="hero-text">
         <div class="hero-header">
-          This website is awesome
+          Unleash Your Potential at Iron Fist Boxing Gym!
         </div>
-        <div class="hero-body">This website has some subtext that goes here under the main title. It's a smaller
-          font and the color is lower contrast.</div>
+        <div class="hero-body">Where champions are made and limits are shattered. Our state-of-the-art boxing gym offers a dynamic and empowering environment for enthusiasts of all levels, from beginners to seasoned pros.</div>
         <div><button class="header-btn">Sign up</button></div>
       </div>
-      <div class="hero-img"><img src="img/placeholder.jpg" width="500" alt="placeholder image">
+      <div class="hero-img"><img src="img/main.jpg" width="500" alt="hero image">
       </div>
     </div>
     <div class="cards-container">
-      <div class="card-header">Some random information.</div>
+      <div class="card-header">At Iron Fist, Boxing is more than just a sport.</div>
       <div class="cards">
-        <div class="card"><img src="img/card1.jpg" alt="card1 image"><p>this is some subtext under an illustration or image</p></div>
-        <div class="card"><img src="img/card2.jpg" alt="card2 image"><p>this is some subtext under an illustration or image</p></div>
-        <div class="card"><img src="img/card3.jpg" alt="card3 image"><p>this is some subtext under an illustration or image</p></div>
-        <div class="card"><img src="img/card4.jpg" alt="card4 image"><p>this is some subtext under an illustration or image</p></div>
+        <div class="card"><img src="img/content1.jpg" alt="card1 image"><p>Boxing fundamentals, advanced techniques, sparring sessions, and specialized conditioning programs. Our team is dedicated to helping you achieve them</p></div>
+        <div class="card"><img src="img/content2.jpg" alt="card2 image"><p>Hone your skills, get in shape, or compete at the highest level, our experienced coaches and top-notch facilities</p></div>
+        <div class="card"><img src="img/content3.jpg" alt="card3 image"><p>Improve your physical fitness, Chasing your dreams of becoming a champion or simply seeking a fun and challenging workout</p></div>
       </div>
     </div>
     <div class="quote">
-      <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people
-        will actually read it. Who knows? All i know is that it looks nice.</p>
-      <strong>-Thor, God of Thunder</strong>
+      <p>"Boxing is the ultimate challenge. There's nothing that can compare to testing yourself the way you do every time you step in the ring."</p>
+      <strong>- Sugar Ray Leonard</strong>
     </div>
     <div class="sign-up-card-container">
       <div class="sign-up-text">
-        <div class="sign-up-header"><strong>Call to action! It's time!</strong></div>
-        <div class="sign-up-body">Sign up for our product by clicking that button right over there!</div>
+        <div class="sign-up-header"><strong>Are you ready to unleash your potential?</strong></div>
+        <div class="sign-up-body">Sign up and start your journey to greatness today!</div>
       </div>
       <div class="card-btn"><button>Sign up</button></div>
     </div>
   </div>
   <div class="footer">
-    Image by <a href="https://www.pexels.com/@tirachard-kumtanom-112571">Tirachard
-    Kumtanom</a> from <a href="https://www.pexels.com">www.pexels.com</a>
+    Image by <a href="https://www.pexels.com/@cottonbro/">cottonbro studio</a> from <a href="https://www.pexels.com">www.pexels.com</a>
     <br>
-    Copyright &copy; <a href="https://github.com/S8VEN">S8VEN</a> - The Odin Project 2021
+    Copyright &copy; <a href="https://github.com/S8VEN">Dede Tusnendi</a>
   </div>
 </body>
 
